Automatically backed up by Learn

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -26,5 +26,8 @@
 
 <script type="text/javascript" charset="utf-8">
 	$(function() {
-		$()
+		$('table').onClick(function(event){
+			event.preventDefault();
+			// if x.count > o.count, set token = x;
+		})
 	})
